Sun Feb 28 13:40:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (nometh_err_initialize): add private_call? parameter.

	* error.c (nometh_err_private_call_p): add private_call? method,
	  to tell if the exception raised in private form FCALL or VCALL.
	  [Feature #12043]

	* vm_eval.c (make_no_method_exception): append private_call?
	  argument.

	* vm_insnhelper.c (ci_missing_reason): copy FCALL flag.

Sun Feb 28 10:19:47 2016  Ryan T. Hosford  <tad.hosford@gmail.com>

	* array.c (rb_ary_and): clarify that set intersection returns the
	  unique elements common to both arrays.

	* array.c (rb_ary_or): clarify that union preserves the order from
	  the given arrays.

Sat Feb 27 17:05:29 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Reducing size of TitleCase
	  table by eliminating duplicates.
	  (with Kimihito Matsui)

Fri Feb 26 14:40:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_step_scan_args): comparison String with Numeric
	  should raise TypeError. it is an invalid type, but not a
	  mismatch the number of arguments.  [ruby-core:62430] [Bug #9810]

Fri Feb 26 14:39:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/extension.rdoc, doc/extension.ja.rdoc: add editor local
	  variables, with commenting out by :enddoc: directives which are
	  just ignored unless code object mode.  [Bug #12111]

Fri Feb 26 12:25:56 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/extension.ja.rdoc: removed rendering error caused by editor specific
	  configuration on http://docs.ruby-lang.org/en/trunk/extension_rdoc.html .
	  [Bug #12111][ruby-core:73990]

Fri Feb 26 11:21:41 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed references to NQXML. It's obsoleted parser.
	  [fix GH-1245][ruby-core:59593][Feature #9371]
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.

Fri Feb 26 11:10:19 2016  Rick Salevsky  <rsalevsky@suse.com>
