@@ -1,3 +1,8 @@
+Sun Feb 28 20:23:36 2016  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
+
+	* lib/drb/drb.rb (error_print): Add verbose failure messages and
+	  avoid infamous DRb::DRbConnError. [Feature #12101]
+
 Sun Feb 28 13:40:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* error.c (nometh_err_initialize): add private_call? parameter.
